removed the data request letter upload in part 2 of registration

--- a/geonode/datarequests/templates/datarequests/registration/shapefile.html
+++ b/geonode/datarequests/templates/datarequests/registration/shapefile.html
@@ -74,10 +74,10 @@
         <div id="file-queue"></div>
       </section>
     
-        <legend>Data Request Letter</legend>     
+        <!--<legend>Data Request Letter</legend>     
         <form id="document-uploader" method="post" enctype="multipart/form-data">
           <input class="btn" id="document-input" type="file">
-      </form>
+      </form>-->
         
       <br />
       <section class="widget">
