--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -68,8 +68,8 @@
                        <span class="caret"></span>
                    </a>
                    <ul class="dropdown-menu">
-                       <li><a href="{% url "analysis-create" %}">{% trans "Create Analysis" %}</a></li>
-                       <li><a href="{% url "analysis-list" %}">{% trans "List Analysis" %}</a></li>
+                       <li><a href="{% url "geosafe:analysis-create" %}">{% trans "Create Analysis" %}</a></li>
+                       <li><a href="{% url "geosafe:analysis-list" %}">{% trans "List Analysis" %}</a></li>
                    </ul>
                </li>
            {% endblock %}
