added fields for administrator in request profile detail, replaced approver with administrator in model fields, rejection and approval both relate the data request profile to the administrator

--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -98,7 +98,10 @@
       <td class="table-user-profile-attribute">{% trans "Intended Use of Dataset" %}</td>
       <td>{{ request_profile.get_intended_use_of_dataset_display }}</td>
       </tr>
-
+       <tr>
+          <td class="table-user-profile-attribute col-md-3">{% trans "Approval/Rejection Administrator"</td>
+          <td>{{request_profile.administrator.username}}</td>
+      </tr>
       {% if request_profile.requester_type == 'noncommercial' or request_profile.requester_type == 'academe' %}
         <tr>
         <td class="table-user-profile-attribute">{% trans "Organization type based on Phil-LiDAR1 Data Distribution Policy" %}</td>
