--- a/geonode/cephgeo/templates/ceph_manager.html
+++ b/geonode/cephgeo/templates/ceph_manager.html
@@ -19,6 +19,7 @@
                 <h4><a href="{% url 'cephgeo.views.file_list_ceph' %}" class="toggle toggle-nav"><i class="fa fa-cubes"></i>Ceph Data Objects</a></h4>
                 <h4><a href="{% url 'cephgeo.views.data_input' %}" class="toggle toggle-nav"><i class="fa fa-file-code-o"></i>Metadata Input</a></h4>
                 <h4><a href="{% url 'cephgeo.views.update_layer_metadata' %}" class="toggle toggle-nav"><i class="fa fa-file-code-o"></i>Update Metadata</a></h4>
+                <h4><a href="{% url 'cephgeo.views.update_fh_style' %}" class="toggle toggle-nav"><i class="fa fa-file-code-o"></i>Update FH Style</a></h4>
             </nav>
         </div>
     </div>
