--- a/geonode/static/geonode/css/featured-layer.css
+++ b/geonode/static/geonode/css/featured-layer.css
@@ -33,3 +33,9 @@ h1.no-margin-top{
   border-top: none;
   font-size: 45px;
 }
+h4 h5 {/*anchor offset*/
+    display: block;
+    position: relative;
+    top: -250px;
+    visibility: hidden;
+}
