geonode.static.img.help.* added help images geonode.templates.help.html added images geonode.static.geonode.css.featured-layer.css added img properties

--- a/geonode/static/geonode/css/featured-layer.css
+++ b/geonode/static/geonode/css/featured-layer.css
@@ -37,3 +37,8 @@ h4:target,
 h5:target{/*anchor offset*/
   padding-top: 75px;
 }
+img{
+  margin: 10px 0px;
+  max-width: 680px;
+  border: 1px solid black;
+}
