--- a/geonode/templates/help.html
+++ b/geonode/templates/help.html
@@ -18,14 +18,23 @@
     <ol>
       <li>Click the <a href="/datarequests/register/">Register</a> button on the top-right corner of the page. After clicking, you will be redirected to the first part of the data request registration.</li>
       <li>You need to fill out the whole form in order to proceed to the next step of the registration process.</li>
-      <li>After providing the required information, click the <strong>Continue</strong> button at the bottom-left part of the page.</li>
-      <li>If you forgot to fill out some fields or provided invalid input, you will be redirected to the same page. Fields that need proper input will be marked red, and messages will be shown regarding the error.</li>
+      <li>After providing the required information, click the <strong>Continue</strong> button at the bottom-left part of the page.
+        <img src="/static/geonode/img/help/help_1.png">
+      </li>
+      <li>If you forgot to fill out some fields or provided invalid input, you will be redirected to the same page. Fields that need proper input will be marked red, and messages will be shown regarding the error.
+        <img src="/static/geonode/img/help/help_2.png">
+      </li>
       <li>
         <p>After providing the correct information, you will be redirected to the second step of the registration process. In this step, you will be required to provide a jurisdiction shapefile and answer the provided Captcha challenge.</p>
         <p>The jurisdiction shapefile must be a valid one and must contain all the necessary parts. The administrator will check this file, and if your request is approved, you will be given access to resources based on the coverage of the shapefile you provided.</p>
+        <img src="/static/geonode/img/help/help_3.png">
       </li>
-      <li>If you want to change some of the information you provided for the first step of the registration, you will be able to go back by clicking the <strong>Prev</strong> button on the bottom-left part of the page.</li>
-      <li>After providing a valid shapefile and answering the Captcha challenge, click the <strong>Submit</strong> button and wait for your registration data to be processed.</li>
+      <li>If you want to change some of the information you provided for the first step of the registration, you will be able to go back by clicking the <strong>Prev</strong> button on the bottom-left part of the page.
+        <img src="/static/geonode/img/help/help_4.png">
+      </li>
+      <li>After providing a valid shapefile and answering the Captcha challenge, click the <strong>Submit</strong> button and wait for your registration data to be processed.
+        <img src="/static/geonode/img/help/help_5.png">
+      </li>
       <li>Once your registration data is processed, you will be redirected to the email confirmation page. An email will be sent to you for verification. You need to follow the steps provided in the email to complete the registration.</li>
       <li>Once you verified your email, your registration is now complete. Your request will now be available to the administrator for approval. You will receive an email regarding the status of your registration once the administrator approve/reject your request. If your request if approved, the details of your new account for logging into the site will be included in the email.</li>
     </ol>
@@ -41,30 +50,55 @@
     </ol>
     <h5 id="download-fhm">Downloading Flood Hazard Maps and other vector/layers via Data Store/Layers</h5>
     <ol>
-      <li>View the desired layer on a map. See <strong>Viewing a Layer</strong>.</li>
-      <li>Click <strong>Request Download</strong> to request permission from the layer owner to download a layer.</li>
-      <li>Wait for the approval of the owner of the uploaded layer.</li>
-      <li>If approval is granted, view desired layer on map. Click on <strong>Download Layer</strong>.</li>
+      <li>View the desired layer on a map. See <strong>Viewing a Layer</strong>.
+        <img src="/static/geonode/img/help/help_6.png">
+      </li>
+      <li>Click <strong>Request Download</strong> to request permission from the layer owner to download a layer.
+        <img src="/static/geonode/img/help/help_7.png">
+      </li>
+      <li>Wait for the approval of the owner of the uploaded layer.
+        <img src="/static/geonode/img/help/help_8.png">
+      </li>
+      <li>If approval is granted, view desired layer on map. Click on <strong>Download Layer</strong>.
+        <img src="/static/geonode/img/help/help_9.png">
+      </li>
       <li>End user license agreement (EULA) will be displayed. The user is required to click <strong>I agree</strong> to proceed with the download.</li>
       <li>Click <strong>Sign EULA</strong></li>
-      <li>Choose desired format of layer to be downloaded. Some files have the option to view the layer in Google Earth.</li>
+      <li>Choose desired format of layer to be downloaded. Some files have the option to view the layer in Google Earth.
+        <img src="/static/geonode/img/help/help_10.png">
+      </li>
       <li>Save file and wait for download to finish.</li>
     </ol>
     <h5 id="download-tiles">Downloading other datasets via Data Store/Data Tiles</h5>
     <ol>
       <li>Login to LiPAD.</li>
-      <li>At the top of the page, click <strong>Datastore</strong> -> <strong>Data Tiles</strong> to display the tiled data map available for selection</li>
-      <li>Navigate towards area of interest. Zoom in by one level on specific area: scroll up using your mouse within the gridded map or click “+” on upper left side of map.</li>
+      <li>At the top of the page, click <strong>Datastore</strong> -> <strong>Data Tiles</strong> to display the tiled data map available for selection
+        <img src="/static/geonode/img/help/help_11.png">
+      </li>
+      <li>Navigate towards area of interest.
+        <img src="/static/geonode/img/help/help_12.png">
+      Zoom in by one level on specific area: scroll up using your mouse within the gridded map or click “+” on upper left side of map.</li>
       <li>Selecting tile/s:</li>
       <ul>
-        <li>To select tiles one by one, simply <strong>click on a map cell.</strong></li>
-        <li>To select a group of tiles, <strong>hold Shift while dragging the mouse to draw a rectangle.</strong>Selected tiles will be highlighted blue. The corresponding geo-reference of each tile is listed below the map.</li>
+        <li>To select tiles one by one, simply <strong>click on a map cell.</strong>
+          <img src="/static/geonode/img/help/help_13.png">
+        </li>
+        <li>To select a group of tiles, <strong>hold Shift while dragging the mouse to draw a rectangle.</strong>Selected tiles will be highlighted blue. The corresponding geo-reference of each tile is listed below the map.
+          <img src="/static/geonode/img/help/help_14.png">
+          <img src="/static/geonode/img/help/help_15.png">
+        </li>
       </ul>
-      <li>Click <strong>Submit</strong> at the bottom of the geo-reference list.</li>
+      <li>Click <strong>Submit</strong> at the bottom of the geo-reference list.
+        <img src="/static/geonode/img/help/help_16.png">
+      </li>
       <li>The Data Cart is displayed. This lists the associated files to the selected tiles.</li>
       <ul>
-        <li>To erase the contents of the cart, click <strong>Empty This Cart.</strong></li>
-        <li>To proceed downloading the files, click <strong>Create FTP Folder.</strong> Requested files will be available for download via FTP.</li>
+        <li>To erase the contents of the cart, click <strong>Empty This Cart.</strong>
+          <img src="/static/geonode/img/help/help_17.png">
+        </li>
+        <li>To proceed downloading the files, click <strong>Create FTP Folder.</strong> Requested files will be available for download via FTP.
+          <img src="/static/geonode/img/help/help_18.png">
+        </li>
       </ul>
       <li>An email will be sent to the registered email address notifying the user of the creation of the FTP folder.</li>
       <li>Run an FTP client:</li>
