--- a/geonode/static/geonode/css/featured-layer.css
+++ b/geonode/static/geonode/css/featured-layer.css
@@ -37,3 +37,8 @@ h4:target,
 h5:target{/*anchor offset*/
   padding-top: 75px;
 }
+img{
+  max-width: 680px;
+  display: block;
+  margin: 20px auto;
+}
