geonode.templates.index.html replaced embedded video with how to.. geonode.templates.help.html added anchor tags for home-select and home-download geonode.static.geonode.css.featured-layer.css added li:target properties with h4 and h5's geonode.templates.index.html changed width for divs, added <a> as modal and added modal div

--- a/geonode/static/geonode/css/featured-layer.css
+++ b/geonode/static/geonode/css/featured-layer.css
@@ -34,7 +34,8 @@ h1.no-margin-top{
   font-size: 45px;
 }
 h4:target,
-h5:target{/*anchor offset*/
+h5:target,
+li:target{/*anchor offset*/
   padding-top: 75px;
 }
 img{
