--- a/geonode/templates/help.html
+++ b/geonode/templates/help.html
@@ -68,7 +68,7 @@
       <li>Navigate towards area of interest.
       <img src="/static/geonode/img/help/help_12.png">
       Zoom in by one level on specific area: scroll up using your mouse within the gridded map or click “+” on upper left side of map.</li>
-      <li>Selecting tile/s:</li>
+      <li id="home-select">Selecting tile/s:</li>
       <ul>
         <li>To select tiles one by one, simply <strong>click on a map cell.</strong></li>
         <img src="/static/geonode/img/help/help_13.png">
@@ -78,7 +78,7 @@
       </ul>
       <li>Click <strong>Submit</strong> at the bottom of the geo-reference list.</li>
       <img src="/static/geonode/img/help/help_16.png">
-      <li>The Data Cart is displayed. This lists the associated files to the selected tiles.</li>
+      <li id="home-download">The Data Cart is displayed. This lists the associated files to the selected tiles.</li>
       <ul>
         <li>To erase the contents of the cart, click <strong>Empty This Cart.</strong></li>
         <img src="/static/geonode/img/help/help_17.png">
