--- a/geonode/templates/index.html
+++ b/geonode/templates/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row body-top">
       <!-- <div class="jumbotron col-md-6"> -->
-        <div class="container col-md-6 center-text">
+        <div class="container col-md-6 center-text" style="width:70%;border-right:2px solid #007196;">
           <h1 class="no-margin-top">{% trans "Welcome to LiPAD!" %}</h1>
           <p>
               {% blocktrans %}
@@ -25,10 +25,26 @@
                 The <a href="https://www.dream.upd.edu.ph/about-us/phil-lidar-1/" title="About the Phil-LiDAR 1 Program">Phil-LiDAR 1 Program</a> aims to produce 3D flood and hazard maps for the 2/3 of Philippine river systems, following the <a href="https://www.dream.upd.edu.ph" title="About DREAM Program">DREAM Program</a> which covered 18 major river basins,  and tapping state universities and colleges (SUCs) and private higher education institutions (HEIs) nationwide in the processing, validation, and modeling of the acquired LiDAR data. Aside from addressing disaster risk reduction and climate change adaptation, the resource information to be generated from this project will also be useful in providing the information requirements of various sectors in the country.
               {% endblocktrans %}
             </p>
-        <!-- </div> -->
-      </div>
-      <div class="col-md-6 border=0">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/KSsbWPeOQfs" frameborder="0" allowfullscreen></iframe>
+        </div>
+      <!-- </div>-->
+      <div class="col-md-6 border=0"  style="width:30%;">
+        <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/KSsbWPeOQfs" frameborder="0" allowfullscreen></iframe>-->
+        {% blocktrans %}
+        <h2 style="margin-top:15px;">How to get data</h2>
+        <p>
+          <ol>
+            <li><a href="/datarequests/register/">Register</a></li>
+            <li><a href="/help/#home-select">Select</a></li>
+            <li><a href="/help/#home-download">Download</a></li>
+          </ol>
+        </p>
+        <h2>Demo Videos</h2>
+        <p>
+          <a data-toggle="modal" data-target="#modal-fhm">Download Flood Hazard Maps.</a>
+        </p><p>
+          <a href="https://www.youtube.com/watch?v=KSsbWPeOQfs">Download LiDAR data tiles.</a>
+        </p>
+        {% endblocktrans %}
       </div>
 
     </div>
@@ -55,7 +71,22 @@
   {% endblock %}
 
 </div>
-
+<div class="modal fade" id="modal-fhm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">{% trans "Download Flood Hazard Maps" %}</h4>
+      </div>
+      <div class="modal-body">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BGL-2hoQP_0" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}</button>
+      </div>
+    </div>
+  </div>
+</div>
   {% block extra_script %}
     {% if GEONODE_SECURITY_ENABLED %}
       {% include "_permissions_form_js.html" %}
