geonode.templates.index.html replaced embedded video with how to.. geonode.templates.help.html added anchor tags for home-select and home-download geonode.static.geonode.css.featured-layer.css added li:target properties with h4 and h5's

--- a/geonode/templates/index.html
+++ b/geonode/templates/index.html
@@ -28,7 +28,21 @@
         <!-- </div> -->
       </div>
       <div class="col-md-6 border=0">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/KSsbWPeOQfs" frameborder="0" allowfullscreen></iframe>
+        <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/KSsbWPeOQfs" frameborder="0" allowfullscreen></iframe>-->
+        <h2>{% trans "How to get data" %}</h2>
+        {% blocktrans %}
+        <p>
+          <ol>
+            <li><a href="/datarequests/register/">Register</a></li>
+            <li><a href="/help/#home-select">Select</a></li>
+            <li><a href="/help/#home-download">Download</a></li>
+          </ol>
+        </p><p>
+          <a href="https://youtube.com">How to download Flood Hazard Maps.</a>
+        </p><p>
+          <a href="https://youtube.com" target="_blank">How to download LiDAR data tiles.</a>
+        </p>
+        {% endblocktrans %}
       </div>
 
     </div>
