geonode.maptiles.view.py changed ObjectDoesNotExist to Exception as e

--- a/geonode/templates/index.html
+++ b/geonode/templates/index.html
@@ -34,8 +34,8 @@
         <p>
           <ol>
             <li><a href="/datarequests/register/">Register</a></li>
-            <li><a href="/help/#home-select">Select</a></li>
-            <li><a href="/help/#home-download">Download</a></li>
+            <li><a href="/help#home-select">Select</a></li>
+            <li><a href="/help#home-download">Download</a></li>
           </ol>
         </p>
         <h2>Demo Videos</h2>
